linkando o acerte.html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     <body>
         <script src="/js/script.js"></script>
         <h1>
-            <a href="/acerte.html">Clique que tem mais</a>
+            <a href="https://bivardourado.github.io/acerte/">Clique que tem mais</a
+          >
         </h1>
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <footer>Meu portifolio - Versão 0.002</footer>
-    </body>
-
+      </body>
     </html>
-</body>
-
+  </body>
 </html>
