linkando o acerte.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <script src="/js/script.js"></script>
         <h1>
-            <a href="https://bivardourado.github.io/acerte/">Clique que tem mais</a
+            <a href="https://bivardourado.github.io/acerte.html/">Clique que tem mais</a
           >
         </h1>
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
